syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.rtassembly.npgraph.grpc";
option java_outer_classname = "AssemblyGuideProto";
option objc_class_prefix = "AGP";

package assembly;

// Interface exported by the server.
service AssemblyGuide {
 	rpc GetAssemblyContribution(RequestAssembly) returns (ResponseAssembly) {}
}

// An alignment from minimap2 sent to the server 
message AlignmentMsg {
	string query_name = 1;
	int32 query_length = 2;
	int32 query_start = 3;
	int32 query_end = 4;
	bool strand = 5;
	string target_name = 6;
	int32 target_length = 7;
	int32 target_start = 8;
	int32 target_end = 9;
	int32 quality = 10;
	int32 score = 11;
}
// Client sent all hits from a chunk simultaneously
message RequestAssembly {
	string read_id = 1;
	repeated AlignmentMsg hits_list = 2;
}
// Response from the assembly guide service: useful or not
message ResponseAssembly {
	string read_id = 1;
	bool usefulness = 2;
}